--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
           - tvOS
           - watchOS
         swift:
+          - 5.3
           - 5.4
           - 5.5
     steps:
@@ -43,10 +44,11 @@ jobs:
       fail-fast: false
       matrix:
         swift:
+          - 5.3
           - 5.4
           - 5.5
     container:
       image: swift:${{ matrix.swift }}
     steps:
     - uses: actions/checkout@v2
-    - run: swift test --parallel -Xswiftc -warnings-as-errors
+    - run: swift test --enable-test-discovery --parallel -Xswiftc -warnings-as-errors
