--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: ci
 
 on:
   push:
@@ -17,7 +17,7 @@ concurrency:
 jobs:
   macOS:
     name: ${{ matrix.platform }} (Swift ${{ matrix.swift }})
-    runs-on: macos-12
+    runs-on: macos-13
     strategy:
       fail-fast: false
       matrix:
@@ -27,16 +27,15 @@ jobs:
           - tvOS
           - watchOS
         swift:
-          - 5.5
-          - 5.6
           - 5.7
+          - 5.8
+          - 5.9
     steps:
-    - uses: actions/checkout@v2
-    - uses: mxcl/xcodebuild@v1
+    - uses: actions/checkout@v3
+    - uses: mxcl/xcodebuild@v2
       with:
         platform: ${{ matrix.platform }}
         swift: ~${{ matrix.swift }}
-        warnings-as-errors: true
   linux:
     name: Linux (Swift ${{ matrix.swift }})
     runs-on: ubuntu-latest
@@ -44,11 +43,11 @@ jobs:
       fail-fast: false
       matrix:
         swift:
-          - 5.5
-          - 5.6
           - 5.7
+          - 5.8
+          # - 5.9
     container:
       image: swift:${{ matrix.swift }}
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - run: swift test --parallel -Xswiftc -warnings-as-errors
